# SCOPE

./: .gitignore  .railwayignore  .slugignore  BLOG.md  EXPERIMENTS.md  GUIDE.md  Procfile  analyze_classifier.py  analyze_model.py  feature_analysis.py  feature_selection.py  fine_tune.py  main.py  predictions_202526.csv  pyproject.toml  railway.json  railway.toml  train.ipynb  train_all_classifiers.py  train_classifier.py  train_model.py  viz.ipynb
api/: app.py  features.py
frontend/: .vercelignore  index.html
scripts/: get_teams.py
